DT-1995 - Fix signup form layout on mobile

--- a/less/widgets/profile.less
+++ b/less/widgets/profile.less
@@ -395,6 +395,12 @@
 			flex: 1 1 auto;
 		}
 
+		.form-group:last-child {
+			-webkit-flex: 0 0 auto;
+			-ms-flex: 0 0 auto;
+			flex: 0 0 auto;
+		}
+
 		// Button
 
 		.button {
